--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,25 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
-  }
+    "compileOnSave": false,
+    "compilerOptions": {
+        "moduleResolution": "node",
+        "module": "esnext",
+        "jsx": "react",
+        "importHelpers": true,
+        "noImplicitAny": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "alwaysStrict": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "strictNullChecks": true,
+        "baseUrl": "./src",
+        "outDir": "./dist/",
+        "pretty": true,
+        "lib": ["es6", "dom", "es2015.promise"],
+        "sourceMap": true,
+        "experimentalDecorators": true,
+        "target": "es5"
+    },
+    "include": ["./src/**/*"]
 }
