--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~8.0.3",
+        "@angular/cdk": "^9.0.0",
         "@angular/common": "~8.0.3",
         "@angular/compiler": "~8.0.3",
         "@angular/core": "~8.0.3",
@@ -21,6 +22,7 @@
         "@angular/platform-browser": "~8.0.3",
         "@angular/platform-browser-dynamic": "~8.0.3",
         "@angular/router": "~8.0.3",
+        "@swimlane/ngx-charts": "^13.0.2",
         "moment": "^2.24.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.9.0",
